# ss_dealii_code

./: .gitattributes  .gitignore  README.md  compilation_notes.md
data/: gitt_diff_vs_stoichiometry.csv  gitt_diffcoeff_fit.m  mc_questions.txt  pareto.htm  peis_diff_coeff_vs_stoichiometry.csv
data/archived/: old.csv  pareto.htm  pareto_gitt.htm  pareto_reasonable_run1_gitt.htm  pareto_restricted_depth_gitt_1.htm  pareto_run1_gitt.htm  pareto_run2_gitt.htm
dealii_tutorials_related/: .dialect.utf-8.add.spl  coursera_to_dealii.tex  purpose_of_header_file.c  to_do.txt
equations/: solid_diffusion.tex
equations/amend_mc_2019_paper/: .latexmkrc  custom_cmds_for_equation_grid.tex  custom_cmds_pkg_diffcoeff.tex  main.tex  phie_at_negcc_calc.m
equations/solid_diffusion/code/: .clang-format  CMakeLists.txt  compile_commands.json  solid_diffusion.cc  temp.cc
equations/solid_diffusion/code/archived/: solid_diffusion_forumquestion.cc  solid_diffusion_v911.cc
equations/solid_diffusion/code/archived/iterative_solver_code/: solid_diffusion.cc
equations/solid_diffusion/code/iterative_solver_code/: CMakeLists.txt
equations/solid_diffusion/code/step_52_trials/: dim_1_step_52_dopri.cc  step_52_dopri_only.cc
equations/solid_diffusion/doc/: .dialect.utf-8.add  solid_diffusion.tex  trial_initial_condition.m
mms/: mms_analytical.m
